--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
 
 * {
     margin: 0;
@@ -11,94 +11,115 @@
 }
 
 header {
-    min-width: 100%;
-    max-height: 192px;
-    display: block;
-    align-items: center;
-    padding: 30px 70px 10px 200px;
+    max-width: 1400px;
+    margin: auto;
+
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+
+    padding: 2rem 4rem 0;
 }
 
-header div {
+#header-first-line {
     display: flex;
     align-items: center;
+    justify-content: space-between;
+
+    gap: 2rem;
 }
 
-header > div > h1 {
-    display: inline-block;
+#logo {
+    display: flex;
     align-items: center;
+    gap: 0.5rem;
+
+    min-width: fit-content;
+}
+
+#logo > h1 {
     color: #c92071;
     font-weight: 600;
-    font-size: 36px;
-    padding-left: 8px;
-}
-
-header div img {
-    height: 100%;
+    font-size: 2.5rem;
 }
 
 header form {
+    width: 100%;
+    max-width: 60%;
     position: relative;
 }
 
 header form input {
-    min-width: 650px;
-    min-height: 60px;
+    width: 100%;
+    height: 60px;
+
     background-color: #F8F8F8;
     border-radius: 6px;
     color: #A0A0A0;
     font-size: 16px;
     padding: 24px;
-    margin-left: 57px;
-    margin-right: 78px;
+}
+
+header form input:focus {
+    border: 2px solid #c92071;
+    outline: none;
 }
 
 header form i {
-    position: absolute;
-    bottom: 22px;
-    left: 670px;
     color: #A0A0A0;
+
+    position: absolute;
+    top: 50%;
+    right: 1rem;
+
+    transform: translateY(-50%);
 }
 
-header span a {
-    font-size: 16p;
+#header-actions {
+    min-width: fit-content;
+
+    display: flex;
+    align-items: center;
+    gap: 1.5rem;
+}
+
+#register {
     color: #474747;
     text-decoration: underline;
-    margin-right: 50px;
     letter-spacing: 1px;
 }
 
-header button {
+#header-actions > button {
     width: 114px;
     height: 40px;
     background-color: #c92071;
     border-radius: 8px;
-    margin-right: 100px;
     font-weight: 700;
     color: white;
 }
 
-header a i {
+#header-actions > a > i {
+    margin-left: 2rem;
     color: #c92071;
     font-size: 20px;
 }
 
-header nav ul {
+nav ul {
     display: flex;
     gap: 42px;
-    margin-top: 48px;
     position: relative;
 }
 
-header nav ul li a {
+nav ul li a {
     color: #A0A0A0;
 }
 
-header nav ul li a#active {
+nav ul li a#active {
     color: #c92071;
     font-weight: 700;
 }
 
-header nav ul li a#active::after{
+nav ul li a#active::after{
     content: "";
     background-color: #c92071;
     position: absolute;
