--- a/css/banner.css
+++ b/css/banner.css
@@ -12,90 +12,87 @@
 
 #banner{
     background-color: #F5F5F5;
+    padding-top: 30px;
+    position: relative;
     display: flex;
-    margin: auto;
-    margin-top: 36px;
-    max-width: 1400;
+    max-width: 1400px;
+    width: 100%;
+    max-height: 1000px;
+    height: 100%;
     flex-direction: row;
-    padding-left: 150px;
+    gap: 3rem;
+    min-width: fit-content;
 }
 
 #banner .texts{
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: bold;
-    padding-left: 100px;
+    align-items: center;
+    position: relative;
+    width: 50%;
+    flex-wrap: wrap;
+    gap: 2rem;
+    padding: 2rem 4rem 0;
+    padding-top: 10%;
 }
 
 #banner .texts > h5{
-    position: absolute;
-    width: 300px;
-    height: 24px;
-    top: 318px;
-    font-weight: 700;
-    font-size: 17px;
-    line-height: 24px;
     letter-spacing: 0.75px;
+    padding-bottom: 10px;
     color: #F6AA1C;
 }
 
 #banner .texts > h1{
-    position: absolute;
-    width: 510px;
-    height: 132px;
-    top: 355px;
-    font-weight: 800;
-    font-size: 64px;
-    line-height: 66px;
+    font-size: 55px;
+    font-weight: 900;
+    padding-top: 20px;
     letter-spacing: 1px;
     color: #1F1F1F;
 }
 
 #banner .texts > p{
-    position: relative;
-    width: 495px;
-    height: 68px;
-    top: 320px;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 34px;
+    padding-top: 10px;
+    padding-bottom: 70px;
     letter-spacing: 0.75px;
     color: #474747;
 }
 
 #banner .texts > button{
-    position: relative;
-    top: 380px;
     background: #C92071;
     border-radius: 8px;
 }
 
 #banner .texts > button{
     width: 40%;
-    height: 50px;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 24px;
-    text-align: center;
+    height: 10%;
     letter-spacing: 0.75px;
     color: #F5F5F5;
 }
 
 #banner .sneakers{
     position: relative;
+    width: 30%;
+    flex-wrap: wrap;
+    left: -20%;
+}
+
+#banner .sneakers > img{
+    position: relative;
+    width: 700px;
+    height: 600px;
 }
 
 #banner .sneakers > button{
-    position: absolute;
     font-size: 12px;
+    position: relative;
+    left: 50%;
+    top: -10%;
 }
 
 #banner .ornament{
     position: absolute;
-    width: 140px;
-    height: 140px;
-    left: 1650px;
-    top: 250px
+    padding-top: 2%;
+    left: 85%;
+    width: 15%;
+    align-items: end;
 }
 
 #banner .ornament > img{
