added special ad

--- a/css/style.css
+++ b/css/style.css
@@ -254,3 +254,73 @@ section .produtosEmAlta .produtos{
     font-family: 'Inter', sans-serif;
     display: inline-flex;
 }
+
+#special-ad {
+    width: 100%;
+    background-color: #FFFFFF;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 6.7rem;
+
+    padding: 6rem 15.9rem;
+}
+
+#special-ad > :first-child {
+    position: relative;
+}
+
+#special-ad > :first-child img{
+    position: relative;
+    z-index: 1;
+}
+
+#circle {
+    float: left;
+    width: 466px;
+    height: 466px;
+    margin: 20px;
+    border-radius: 50%;
+    clip-path: inset(0px 0px 132px 0px);
+    background-image: linear-gradient(180deg, #B5B6F2 0%, #EFEFFF 30%, #FFF 60%);
+
+    position: absolute;
+    top: -2.8rem;
+    left: 3.9rem;
+}
+
+#aside-ad h5 {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 22px;
+    color: #C92071;
+}
+
+#aside-ad h3 {
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 50px;
+    color: #474747;
+    margin-top: 1rem;
+}
+
+#aside-ad p {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 28px;
+    color: #474747;
+    margin: 1rem 0rem;
+}
+
+#aside-ad button {
+    background-color: #C92071;
+    width: 200px;
+    height: 40px;
+    border-radius: 8px;
+    cursor: pointer;
+
+    font-weight: 700;
+    font-size: 14px;
+    color: #f5f5f5;
+}
