--- a/css/banner.css
+++ b/css/banner.css
@@ -1,39 +1,28 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
-
-*{
-    margin: 0;
-    padding: 0;
-    border: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-    list-style: none;
-    font-family: 'Inter', sans-serif;
-}
-
 #banner{
     background-color: #F5F5F5;
+    width: 100%;
+
     position: relative;
     display: flex;
-    width: 100%;
-    height: 100%;
     flex-direction: row;
-    gap: 3rem;
-    min-width: fit-content;
+
+    @media screen and (max-width: 1025px) {
+        flex-direction: column-reverse;
+    }
 }
 
 #banner .texts{
     position: relative;
     width: 50%;
-    flex-wrap: wrap;
-    gap: 2rem;
-    padding: 2rem 4rem 0;
-    padding-top: 6%;
-
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 1rem;
+    padding: 0 8.2rem;
 }
 
 #banner .texts > h5{
     letter-spacing: 0.75px;
-    padding-bottom: 10px;
     color: #F6AA1C;
 }
 
@@ -41,60 +30,63 @@
     font-size: 50px;
     font-weight: 700;
     max-width: 480px;
-    padding-top: 20px;
     letter-spacing: 1px;
     color: #1F1F1F;
 }
 
 #banner .texts > p{
-    padding-top: 10px;
-    padding-bottom: 70px;
     max-width: 500px;
     letter-spacing: 0.75px;
+    line-height: 1.8em;
     color: #474747;
 }
 
-#banner .texts > button{
+#banner .texts > a{
     background: #C92071;
     border-radius: 8px;
-}
+    padding: 1rem 3rem;
+    max-width: 12rem;
+    margin-top: 1.5rem;
 
-#banner .texts > button{
-    width: 40%;
-    height: 10%;
     letter-spacing: 0.75px;
     color: #F5F5F5;
 }
 
 #banner .sneakers{
     position: relative;
-    width: 30%;
-    flex-wrap: wrap;
-    left: -20%;
+    width: 60%;
 }
 
 #banner .sneakers > img{
-    position: relative;
-    width: 700px;
-    height: 600px;
-}
-
-#banner .sneakers > button{
-    font-size: 12px;
-    position: relative;
-    left: 50%;
-    top: -10%;
+    max-width: 700px;
+    width: 100%;
+    aspect-ratio: 7/5.5;
 }
 
 #banner .ornament{
     position: absolute;
-    padding-top: 2%;
-    left: 85%;
-    width: 15%;
-    align-items: end;
+    right: 5%;
+    top: 4rem;
 }
 
 #banner .ornament > img{
     size: 100%;
     opacity: 0.6;
 }
+
+#elipse{
+    position: absolute;
+    left: 50%;
+    transform: translateY(-50%);
+    bottom: 3rem;
+}
+
+#elipse button{
+    color: #CCCCCC;
+    cursor: pointer;
+}
+
+#elipse .active{
+    color: #C92071;
+}
+
